--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,3 +40,12 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
+    # Applies to all files under models/staging/
+    staging:
+        materialized: table
+    # Applies to all files under models/prep/
+    prep:
+        materialized: table
+    # Applies to all files under models/mart/
+    mart:
+        materialized: table
